[tool.poetry]
name = "thad-gpt"
version = "0.1.0"
description = "Accurate answers and instant citations for your documents"
authors = ["Ledger Investing"]
license = "MIT"
readme = "README.md"
packages = [{include = "thad_gpt"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
langchain = "0.0.172"
cohere = "^4.5.1"
faiss-cpu = "^1.7.4"
openai = "^0.27.6"
docx2txt = "^0.8"
pillow = "^9.5.0"
pypdf = "^3.8.1"
tenacity = "^8.2.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
pytest = "^7.3.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
